@@ -14,7 +14,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.2.2.2 2004/06/04 02:31:53 marka Exp $ */
+/* $Id: named.conf,v 1.2.2.3 2006/03/09 23:38:20 marka Exp $ */
 
 /*
  * Choose a keyname that is unlikely to clash with any real key names.
@@ -58,6 +58,7 @@ options {
 	recursion yes;
 	notify yes;
 	dnssec-enable yes;
+	dnssec-validation yes;
 	dnssec-lookaside "." trust-anchor "dlv.utld";
 };
 
