@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.20 2004/03/10 02:19:53 marka Exp $ */
+/* $Id: named.conf,v 1.20.18.1 2006/03/09 23:38:20 marka Exp $ */
 
 // NS1
 
@@ -32,6 +32,7 @@ options {
 	recursion no;
 	notify yes;
 	dnssec-enable yes;
+	dnssec-validation yes;
 };
 
 zone "." {
