@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.23.18.1 2004/05/05 01:32:35 marka Exp $ */
+/* $Id: named.conf,v 1.23.18.2 2006/03/09 23:38:20 marka Exp $ */
 
 // NS2
 
@@ -32,6 +32,7 @@ options {
 	recursion no;
 	notify yes;
 	dnssec-enable yes;
+	dnssec-validation yes;
 };
 
 zone "." {
