@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.22.18.1 2004/04/16 00:01:39 marka Exp $ */
+/* $Id: named.conf,v 1.22.18.2 2006/03/09 23:38:20 marka Exp $ */
 
 // NS4
 
@@ -31,6 +31,7 @@ options {
 	listen-on-v6 { none; };
 	recursion yes;
 	dnssec-enable yes;
+	dnssec-validation yes;
 	dnssec-must-be-secure mustbesecure.example yes;
 };
 
