@@ -14,7 +14,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.6.18.1 2004/06/04 02:31:53 marka Exp $ */
+/* $Id: named.conf,v 1.6.18.2 2006/03/09 23:38:20 marka Exp $ */
 
 // NS6
 
@@ -32,6 +32,7 @@ options {
 	notify yes;
 	disable-algorithms . { DSA; };
 	dnssec-enable yes;
+	dnssec-validation yes;
 	dnssec-lookaside . trust-anchor dlv;
 };
 
